# TPO-lab1

./: CMakeLists.txt
.github/workflows/: checks.yml
lib/: lr1.cpp  lr1.h
tests/: CMakeLists.txt  FileWriter.h  log.txt  lr1_test.cpp
